# taxi-demand-predictor

./: pyproject.toml
.github/workflows/: feature_pipeline.yaml
data/transformed/: ts_data_2022_01.parquet
models/: model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_to_ts_data.ipynb  03_transform_ts_data_into_features_and_target.ipynb  04_transform_raw_data_into_features_and_target.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model_with_feature_engineering.ipynb  11_feature_pipeline.ipynb  12_model_training_pipeline.ipynb
src/: config.py  data.py  frontend.py  model.py
